# Introduction-to-Robotics

./: Introduction-to-Robotics - 快捷方式.lnk  README.md
2021作业/FinalProject/: 期末作业简单教程.pptx  期末课程设计.docx
2021作业/FinalProject/FinalProject/controllers/: CMakeCache.txt
2021作业/FinalProject/FinalProject/controllers/my_controller/: CMakeLists.txt  Makefile  cmake_install.cmake  my_controller.cpp
2021作业/FinalProject/FinalProject/worlds/: .world1.wbproj  .world4.wbproj  world2.wbt  world3.wbt  world4.wbt
2021作业/FinalProject/期末作业_郝裕玮_18329015/: 期末作业_郝裕玮_18329015.docx
2021作业/FinalProject/期末作业_郝裕玮_18329015/FinalProject/worlds/: .world2.wbproj  .world3.wbproj  world1.wbt
2021作业/hw1/: 机器人导论_hw1.docx
2021作业/hw2/: 18329015_郝裕玮_Lab1.docx  报告简易模板.docx  机器人导论_hw2.docx
2021作业/hw2/car/world/: .complex.wbproj  .simple.wbproj  complex.wbt  simple.wbt
2021作业/hw2/car_self/controllers/my_controller/: main.cpp
2021作业/hw2/car_self/controllers/test/: test.cpp
2021作业/hw2/car_self/controllers/test2/: test2.cpp
2021作业/hw2/car_self/world/: .test.wbproj  .unnamed.wbproj  unnamed.wbt
2021作业/hw3/18329015_郝裕玮_Lab2_视觉巡线小车/: 18329015_郝裕玮_Lab2_视觉巡线小车.docx
2021作业/hw3/18329015_郝裕玮_Lab2_视觉巡线小车/Line Following/world/: .complex.wbproj  HingeJoint.wbo  HingeJoint2.wbo  complex.wbt
2021作业/hw3/Line Following/world/: .complex.wbproj  complex.wbt
2021作业/hw4/: 机器人导论作业.docx
2021作业/hw4/18329015_郝裕玮_Lab3_PRM路径规划/: 18329015_郝裕玮_Lab3_PRM路径规划.docx  PRM_Init.ipynb  PRM_Init.py
2021作业/hw5/18329015_郝裕玮_Lab4_RRT路径规划/: 18329015_郝裕玮_Lab4_RRT路径规划.docx  RRT Algorithm.ipynb  RRT Algorithm.py
(+10 files in other folders)
